--- a/source/index.html
+++ b/source/index.html
@@ -44,14 +44,19 @@
 
   <section class="catalog__list-wrap">
     <div class="catalog__sort-wrap">
-      <select class="catalog__sort">
-        <option>По умолчанию</option>
-      </select>
+      <div class="catalog__sort-inner">
+        <select class="catalog__sort" aria-label="Сортировка">
+          <option>По умолчанию</option>
+          <option>По цене min</option>
+          <option>По цене max</option>
+          <option>По наименованию</option>
+        </select>
+      </div>
     </div>
     <ul class="catalog__list">
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
@@ -64,7 +69,7 @@
       </li>
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
@@ -77,7 +82,7 @@
       </li>
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
@@ -90,7 +95,7 @@
       </li>
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
@@ -103,7 +108,7 @@
       </li>
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
@@ -116,7 +121,7 @@
       </li>
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
@@ -129,7 +134,7 @@
       </li>
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
@@ -142,7 +147,7 @@
       </li>
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
@@ -155,7 +160,7 @@
       </li>
       <li class="catalog__item product">
         <div class="product__image">
-          <img src="../img/product.jpg" width="332" height="200" alt="Изображение товара">
+          <img src="img/product.jpg" width="332" height="200" alt="Изображение товара">
         </div>
         <div class="product__text">
           <h3 class="product__title">Наименование товара</h3>
